Terrain with a moderate amount of Theia (#252)
Co-authored-by: Stan Brown <hdgaming700@gmail.com>